Adding radarmap progress so far

--- a/index.html
+++ b/index.html
@@ -64,13 +64,20 @@
   <!-- Visualization goes here -->
 
 
+
   <div class='table-holder'>
     <!-- Aditi's stuff goes here -->
   </div>
   
-  <div class='radarmap-holder'>
-    <!-- Keshav's stuff goes here -->
+  
+  <!-- Keshav test code  -->
+  <div class='radarchart-holder'>
+    <h1> radar chart example </h1>
+    <div id='chart'></div>
+    <svg id='radarchart' viewbox=0,0,300,300 height=300 width=300> </svg>
   </div>
+  <!-- Keshav test code ends -->
+
 
   <div class='piechart-holder'>
     <h1> John's Playlist Breakdown</h1>
@@ -134,5 +141,10 @@
   <script src='js/table.js'></script>
   <script src='js/radarmap.js'></script>
   <script src='js/moodevaluation.js'></script>
+  
+  <!-- Keshav test scripts  -->
+  <script src='js/radarmapLiked.js'></script>
+  <script src='js/radarscript.js'></script>
+  <!-- Keshav test scripts end  -->
 </body>
 </html>
