getting vis to show

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   
 
   <!-- Visualization goes here -->
-  <div class='table-holder' id='table'>
+  <div class='table-holder'>
     <!-- Aditi's stuff goes here -->
   </div>
   
@@ -123,7 +123,6 @@
   
   <!-- Scripts at the end avoid need for dealing with async, defer, or onload event handlers -->
   <script src='lib/d3.v6.1.1/d3.min.js'></script>
-  <script src='js/table.js'></script>
   <script src='js/piechartlegend.js'></script>
   <script src='js/visualization.js'></script>
   <script src='js/piechartLiked.js'></script>
