--- a/index.html
+++ b/index.html
@@ -64,16 +64,20 @@
   <!-- Visualization goes here -->
   <div class='table-holder'>
     <!-- Aditi's stuff goes here -->
+    <h1>Playlist Songs Table</h1>
+    <svg id='table' viewbox=0,0,500,500 height=500 width=500> </svg>
   </div>
   
   
   <!-- Keshav test code  -->
+  <!-- 
   <div class='radarchart-holder'>
     <h1> radar chart example </h1>
     <div id='chart'></div>
     <svg id='radarchart' viewbox=0,0,300,300 height=300 width=300> </svg>
   </div>
-  <!-- Keshav test code ends -->
+  <-- Keshav test code ends -->
+
 
 
   <div class='piechart-holder'>
@@ -136,7 +140,7 @@
   <script src='js/piechartAlternative.js'></script>
   <script src='js/piechartAccoustic.js'></script>
   <script src='js/table.js'></script>
-  <script src='js/radarmap.js'></script>
+  <!--script src='js/radarmap.js'></script-->
   <script src='js/moodevaluation.js'></script>
   
   <!-- Keshav test scripts  -->
