--- a/index.html
+++ b/index.html
@@ -66,15 +66,21 @@
 
 
   <div class='table-holder'>
-    <!-- Aditi's stuff goes here -->
+    <h1>Playlist Songs Table</h1>
+    <svg id='table' viewbox=0,0,500,500 height=500 width=500> </svg>
   </div>
   
   
   <!-- Keshav test code  -->
   <div class='radarchart-holder'>
     <h1> radar chart example </h1>
-    <div id='chart'></div>
+    
+    <div id='body'>
+      <div id='chart'></div>
+    </div>
     <svg id='radarchart' viewbox=0,0,300,300 height=300 width=300> </svg>
+
+    
   </div>
   <!-- Keshav test code ends -->
 
@@ -139,7 +145,6 @@
   <script src='js/piechartAlternative.js'></script>
   <script src='js/piechartAccoustic.js'></script>
   <script src='js/table.js'></script>
-  <script src='js/radarmap.js'></script>
   <script src='js/moodevaluation.js'></script>
   
   <!-- Keshav test scripts  -->
