--- a/index.html
+++ b/index.html
@@ -63,17 +63,14 @@
 
   <!-- Visualization goes here -->
   <div class='table-holder'>
-<<<<<<< HEAD
-=======
     <!-- Aditi's stuff goes here -->
->>>>>>> e934bc71c1e203c1154015fe347ca17c6595d31a
     <h1>Playlist Songs Table</h1>
     <svg id='table' viewbox=0,0,500,500 height=500 width=500> </svg>
   </div>
   
   
   <!-- Keshav test code  -->
-  <!-- 
+
   <div class='radarchart-holder'>
     <h1> radar chart example </h1>
     
@@ -84,7 +81,7 @@
 
     
   </div>
-  <-- Keshav test code ends -->
+  <!-- Keshav test code ends -->
 
 
 
@@ -148,10 +145,6 @@
   <script src='js/piechartAlternative.js'></script>
   <script src='js/piechartAccoustic.js'></script>
   <script src='js/table.js'></script>
-<<<<<<< HEAD
-=======
-  <!--script src='js/radarmap.js'></script-->
->>>>>>> e934bc71c1e203c1154015fe347ca17c6595d31a
   <script src='js/moodevaluation.js'></script>
   
   <!-- Keshav test scripts  -->
