table rendering, not scrolling

--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
   
 
   <!-- Visualization goes here -->
-  <div class='table-holder'>
+  <div class='table-holder' id='table'>
     <!-- Aditi's stuff goes here -->
     <h1>Playlist Songs Table</h1>
-    <svg id='table' viewbox=0,0,500,500 height=500 width=500> </svg>
+    <!--svg viewbox=0,0,500,500 height=500 width=500> </svg-->
   </div>
   
   
