fixed radar chart so now it takes in our data. Also fixed meanAtt method and put it in evaluationMethods.js

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
   <script src='js/piechartAlternative.js'></script>
   <script src='js/piechartAccoustic.js'></script>
   <script src='js/table.js'></script>
-  <script src='js/moodevaluation.js'></script>
+  <script src='js/evaluationMethods.js'></script>
   
   <!-- Keshav test scripts  -->
   <script src='js/radarmapLiked.js'></script>
