Continued to edit css formating and a few other minor fixes

--- a/index.html
+++ b/index.html
@@ -61,26 +61,28 @@
   </div>
   
   <h1 style='text-align:center;'>Playlist Songs Table</h1>
-  <!-- Visualization goes here -->
-  <div class='table-holder' id='table'>
-    <!-- Aditi's stuff goes here -->
-    <!--svg viewbox=0,0,500,500 height=500 width=500> </svg-->
-  </div>
-  
-  
-  <!-- Keshav test code  -->
 
-  <div class='radarchart-holder'>
-    <h1> Radar Chart Example </h1>
-    
-    <div id='body'>
-      <div id='chart'></div>
-    </div>
-    <svg id='radarchart' viewbox=0,0,0,0 height=0 width=0> </svg>
+  
+  <div class='table-radar-holder'>
+
+    <!-- TABLE  -->
+    <div class='table-holder' id='table' viewbox=0,0,400,600> </div>
+  
+    <!-- RADAR CHART -->
+    <div class='radar-holder' id='radar' viewbox=0,0,400,600> </div>
 
     
   </div>
-  <!-- Keshav test code ends -->
+
+  <div class='mood-buttons-holder'>
+
+    <h1 class='happy'>Happy</h1>
+    <h1 class='gloomy'>Gloomy</h1>
+    <h1 class='bops'>Bops</h1>
+    <h1 class='dance'>Dance</h1>
+    <h1 class='study'>Study</h1>
+
+  </div>
 
 
 
