--- a/index.html
+++ b/index.html
@@ -62,6 +62,15 @@
   
   <h1 style='text-align:center;'>Playlist Songs Table</h1>
 
+  <div class='mood-buttons-holder'>
+
+    <h3 class='liked'>Liked Songs</h3>
+    <h3 class='hosting'>Hosting 2020</h3>
+    <h3 class='alternative'>No Other Alternatives</h3>
+    <h3 class='acoustic'>Midnight Acoustics</h3>
+
+  </div>
+
   
   <div class='table-radar-holder'>
 
