Added Buttons that change data within playlist

--- a/index.html
+++ b/index.html
@@ -76,11 +76,10 @@
 
   <div class='mood-buttons-holder'>
 
-    <h1 class='happy'>Happy</h1>
-    <h1 class='gloomy'>Gloomy</h1>
-    <h1 class='bops'>Bops</h1>
-    <h1 class='dance'>Dance</h1>
-    <h1 class='study'>Study</h1>
+    <button onclick="update('data/john_liked_songs.csv','all')">Liked Songs</button>
+    <button onclick="update('data/john_accoustics_2020.csv','all')">Midnight Acoustics</button>
+    <button onclick="update('data/john_alt_2020.csv','all')">No Other Alternatives</button>
+    <button onclick="update('data/john_hosting_2020.csv','all')">Hosting 2020</button>
 
   </div>
 
