--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
   
   <h1 style='text-align:center;'>Playlist Songs Table</h1>
 
-  <div class='mood-buttons-holder'>
+  <div class='playlist-buttons-holder'>
 
-    <h3 class='liked'>Liked Songs</h3>
-    <h3 class='hosting'>Hosting 2020</h3>
-    <h3 class='alternative'>No Other Alternatives</h3>
-    <h3 class='acoustic'>Midnight Acoustics</h3>
+    <button class='likedsongsbutton' onclick="update('data/john_liked_songs.csv','all')">Liked Songs</button>
+    <button onclick="update('data/john_accoustics_2020.csv','all')">Midnight Acoustics</button>
+    <button onclick="update('data/john_alt_2020.csv','all')">No Other Alternatives</button>
+    <button onclick="update('data/john_hosting_2020.csv','all')">Hosting 2020</button>
 
   </div>
 
@@ -85,10 +85,12 @@
 
   <div class='mood-buttons-holder'>
 
-    <button onclick="update('data/john_liked_songs.csv','all')">Liked Songs</button>
-    <button onclick="update('data/john_accoustics_2020.csv','all')">Midnight Acoustics</button>
-    <button onclick="update('data/john_alt_2020.csv','all')">No Other Alternatives</button>
-    <button onclick="update('data/john_hosting_2020.csv','all')">Hosting 2020</button>
+    <h3 class='happy'>Happy</h3>
+    <h3 class='gloomy'>Gloomy</h3>
+    <h3 class='bops'>Bops</h3>
+    <h3 class='dance'>Dance</h3>
+    <h3 class='study'>Study</h3>
+
 
   </div>
 
