--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
   <div class='table-radar-holder'>
 
     <!-- TABLE  -->
-    <div class='table-holder' id='table' viewbox=0,0,400,600> </div>
+    <div class='table-holder' id='table'> </div>
   
     <!-- RADAR CHART -->
-    <div class='radar-holder' id='radar' viewbox=0,0,400,600> </div>
+    <div class='radar-holder' id='radar'> </div>
 
     
   </div>
