--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     <h1> John's Playlist Breakdown</h1>
     <!-- Change viewbox to whatever you want, e.g., '0 0 1000 6000' This determines your aspect ratio and coordinate system -->    
     <!-- Delete all the sample SVG code below after the viewbox to before the closing tag. Populate this part of the SVG with D3. -->
-    <svg id='piechartLiked' viewbox=0,0,300,300 height=300 width=300> </svg>
+    <div id='piechartLiked' viewbox=0,0,300,300 height=300 width=300></div>
     <svg id='piechartHosting' viewbox=0,0,300,300 height=300 width=300> </svg>
     <svg id='piechartAlternative' viewbox=0,0,300,300 height=300 width=300> </svg>
     <svg id='piechartAccoustic' viewbox=0,0,300,300 height=300 width=300> </svg>
