updated pie charts with tooltips and better mood evaluation

--- a/index.html
+++ b/index.html
@@ -94,16 +94,16 @@
 
   </div>
 
+  <h1> John's Playlist Breakdown</h1>
 
 
   <div class='piechart-holder'>
-    <h1> John's Playlist Breakdown</h1>
     <!-- Change viewbox to whatever you want, e.g., '0 0 1000 6000' This determines your aspect ratio and coordinate system -->    
     <!-- Delete all the sample SVG code below after the viewbox to before the closing tag. Populate this part of the SVG with D3. -->
     <div id='piechartLiked' viewbox=0,0,300,300 height=300 width=300></div>
-    <svg id='piechartHosting' viewbox=0,0,300,300 height=300 width=300> </svg>
-    <svg id='piechartAlternative' viewbox=0,0,300,300 height=300 width=300> </svg>
-    <svg id='piechartAccoustic' viewbox=0,0,300,300 height=300 width=300> </svg>
+    <div id='piechartHosting' viewbox=0,0,300,300 height=300 width=300> </div>
+    <div id='piechartAlternative' viewbox=0,0,300,300 height=300 width=300> </div>
+    <div id='piechartAccoustic' viewbox=0,0,300,300 height=300 width=300> </div>
     <!-- <div class='piechart-holder' id='piecharts'></div> -->
     <!-- <div class='piechartlegend-holder' id='piechartlegend'></div> -->
   </div>
