table scrollbar and reordering buttons

--- a/index.html
+++ b/index.html
@@ -62,15 +62,15 @@
   <div class='playlist-buttons-holder'>
 
     <button class='likedsongsbutton' onclick="update('data/john_liked_songs.csv','all')">Liked Songs</button>
-    <button onclick="update('data/john_accoustics_2020.csv','all')">Midnight Acoustics</button>
-    <button onclick="update('data/john_alt_2020.csv','all')">No Other Alternatives</button>
     <button onclick="update('data/john_hosting_2020.csv','all')">Hosting 2020</button>
+    <button onclick="update('data/john_alt_2020.csv','all')">No Other Alternatives</button>
+    <button onclick="update('data/john_accoustics_2020.csv','all')">Midnight Acoustics</button>
 
     
 
   </div>
 
-  <div class='radar abstract'>
+  <!-- <div class='radar abstract'>
     <h3 style="text-align: left">How to use the radar map</h3>
     
     <p>
@@ -78,7 +78,7 @@
       Selecting one song from the table displays the attributes of just that song. 
       Upon selecting multiple songs from the table, the radar map displays the mean attributes of your selection. 
     </p>
-  </div>
+  </div> -->
 
   
   <div class='table-radar-holder'>
