Updated abstract, added instructions

--- a/index.html
+++ b/index.html
@@ -48,11 +48,39 @@
       <p>
         Our project is focused on working with ndoherty.design to work with their PlaylistNinja web app and help create visualizations 
         to display user data. The overall project will consist of taking into account certain user metrics for personal music tastes 
-        (such as danceability, energy, valence, tempo, popularity, etc.), visualizing them in an easy to read graphic, and providing them 
-        with similar artists and tracks that match their preferences. The idea behind this is to work off Spotify’s already existing 
-        algorithm of selecting new music for their users, but to add a new element of allowing people to see the trends in their saved 
-        songs and find similar ones with more ease.
+        (such as danceability, energy, valence, liveness, popularity, etc.), visualizing them in an easy to read graphic, and providing 
+        them with a set of visualizations that will allow them to understand and view patterns in their preferences. The idea behind 
+        this is to work off Spotify’s already existing algorithm of selecting new music for their users, but to add a new element of 
+        allowing people to see the trends in their saved songs and each of their playlists.
+
       </p>
+    </div>
+
+    <div class='visualizationUse'>
+      <h3 style="padding : 10px; text-align: left">How to use our Visualization</h3>
+      <p>
+        Below you will see a playlist bar, a table, a rdar chart, and a collection of donut charts. All of these will help you to 
+        better understand the trends in your music. 
+      </p>
+        
+        <p>
+        Use the playlist bar to select which set of songs you wish to see– the default is "Liked Songs". Once you hit a button, the 
+        table will display those set of songs and the radar chart will display the averaged metrics of all the songs in that playlist.
+      </p>
+
+      <p>
+        Click on songs in the table to select them and view the metrics for them in particular. Click again to unselect or reclick the 
+        playlist button to completely reset.
+      </p>
+
+      <p>
+        Below the table and radar chart, a collection of donut charts are displayed. These are here to help show the distribution of 
+        moods in each of your playlists. Hover over a partic color to see the number of songs you have for a specific mood, or view the 
+        default that shows the total number of songs present in each playlist.
+      </p>
+
+      <p>Hope you enjoy!</p>
+
     </div>
     
   </div>
