added visualization design section

--- a/index.html
+++ b/index.html
@@ -171,6 +171,37 @@
     <h1>Visualization explanation</h1>
     
     <p>Replace with a brief explanation (can be copied from the paper) and linked presentation slides.</p>
+
+    <p>
+      Our visualizations consist of a table, a radar chart, and a collection of donut charts. All of these visualizations come together 
+      to create an informative experience that allows a user to better understand their personal music data. The table is accompanied by 
+      a playlist bar that allows the user to select which collection of songs they wish the table to display. Once a playlist is selected, 
+      the table then shows all of the songs currently contained in that playlist. The table is scrollable and selectable. When no songs 
+      have been selected, the radar chart to the right of the table shows the metrics of the entire playlist averaged together. When a 
+      user starts to select songs, the radar chart changes to show only the metric averages of the highlighted songs instead. 
+    </p>
+    <p>
+      The radar chart allows for a user to better visualize the patterns in their music. The metrics the radar chart displays are a song’s 
+danceability, valence, liveness, popularity, acousticness, spechiness, and energy. This radar chart is linked to the table. While 
+nothing in the radar chart is selectable, it changes when the items in the table are selected. This allows for an easy and intuitive 
+way for a user to view their playlist metrics. To view in more detail, you can hover over one of the points in the radar chart to view 
+the exact percentage of that metric.
+    </p>
+    <p>
+Our last visualization is a collection of donut charts below the other two visualizations. There is a separate donut chart for each 
+playlist a user has. The purpose of these is to allow the user to visualize the mood distribution in all of the songs they have for 
+each of their playlists. To gather more specific data, you can hover over any color in one chart to view the exact number of songs per 
+mood. Otherwise, the default view shows the total number of songs contained in that particular playlist. There is a legend below the 
+charts that shows what color represents each mood. We changed our initial approach of using pie charts to using donut charts instead 
+because we believed that it allowed for more information to be conveyed at once. Now with the donut charts, we are able to display the 
+number of songs automatically while still having an accurate display of the distribution of every mood present in a playlist. 
+</p>
+<p>
+The pie charts don’t link to the other two visualizations because we believed that this would create too much confusion. However, 
+looking at all of the visualizations together, it becomes a very holistic and efficient way for a user to come and understand their 
+personal music data at a glance. There is also enough flexibility, allowing users to choose which songs they wish to see the metrics 
+of and what music moods they want the details of.
+    </p>
     
     <h1>Acknowledgments</h1>
 
