--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <p>
       Selecting a playlist from the options above displays the mean attributes of that playlist in the radar map. 
       Selecting one song from the table displays the attributes of just that song. 
-      Upon selecting multiple songs from the table, the radar map displays the mean attributes of your selection. 
+      Upon selecting multiple songs from the table, the radar map displays the mean attributes of your selection.  Click on something again to unselect it or click on a button to reset all selections.
     </p>
   </div>
 
@@ -115,10 +115,10 @@
   <div class='piechart-holder'>
     <!-- Change viewbox to whatever you want, e.g., '0 0 1000 6000' This determines your aspect ratio and coordinate system -->    
     <!-- Delete all the sample SVG code below after the viewbox to before the closing tag. Populate this part of the SVG with D3. -->
-    <div id='piechartLiked' viewbox=0,0,300,300 height=300 width=300></div>
-    <div id='piechartHosting' viewbox=0,0,300,300 height=300 width=300> </div>
-    <div id='piechartAlternative' viewbox=0,0,300,300 height=300 width=300> </div>
-    <div id='piechartAccoustic' viewbox=0,0,300,300 height=300 width=300> </div>
+    <div id='piechartLiked'></div>
+    <div id='piechartHosting'> </div>
+    <div id='piechartAlternative'> </div>
+    <div id='piechartAccoustic'> </div>
     <!-- <div class='piechart-holder' id='piecharts'></div> -->
     <!-- <div class='piechartlegend-holder' id='piechartlegend'></div> -->
   </div>
