--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@ personal music data at a glance. There is also enough flexibility, allowing user
 of and what music moods they want the details of.
     </p>
 
-    <p><a href='https://docs.google.com/presentation/d/1XSr41ZIq_0qIlHw9R1enu7kIf7J96fm3NfXDujFPHnQ/edit?usp=sharing'>Google Slides Presentation</p>
+    <p><a href='https://docs.google.com/presentation/d/1XSr41ZIq_0qIlHw9R1enu7kIf7J96fm3NfXDujFPHnQ/edit?usp=sharing'>Google Slides Presentation</a></p>
     
     <h1>Acknowledgments</h1>
 
