--- a/index.html
+++ b/index.html
@@ -225,6 +225,14 @@ of and what music moods they want the details of.
         Pure CSS responsive 'Fork me on GitHub' ribbon</a>
         by Chris Heilmann is used to create the banner that links back to the source code repository.
       </li>
+      <li><a href='https://github.com/plamere/spotipy'>
+        SpotiPy Library</a>
+        is a Python library used to help analyze data from the Spotify Web API.
+      </li>
+      <li><a href='https://github.com/alangrafu/radar-chart-d3'>
+        Radar Chart Example</a>
+        by Alvaro Graves was used to understand how to create the radar chart.
+      </li>
     </ul>
   </div>
   
