--- a/index.html
+++ b/index.html
@@ -224,6 +224,10 @@
         Pure CSS responsive 'Fork me on GitHub' ribbon</a>
         by Chris Heilmann is used to create the banner that links back to the source code repository.
       </li>
+      <li><a href=' https://developer.spotify.com/documentation/web-api/'>
+        The Spotify Web API</a>
+        was used to gather and understand our personal music data and view the metrics.
+      </li>
       <li><a href='https://github.com/plamere/spotipy'>
         SpotiPy Library</a>
         is a Python library used to help analyze data from the Spotify Web API.
