updated radar link

--- a/index.html
+++ b/index.html
@@ -232,9 +232,9 @@
         SpotiPy Library</a>
         is a Python library used to help analyze data from the Spotify Web API.
       </li>
-      <li><a href='https://github.com/alangrafu/radar-chart-d3'>
+      <li><a href='http://bl.ocks.org/nbremer/6506614'>
         Radar Chart Example</a>
-        by Alvaro Graves was used to understand how to create the radar chart.
+        by Nadieh Bremer was used to understand how to create the radar chart.
       </li>
     </ul>
   </div>
