--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@
       </p>
 
       <p>
-        Filter further by selecting a spefic mood to see or click on songs in the table to select them and view the metrics for them in particular. Click again to unselect or reclick the 
+        Filter further by selecting a specific mood to see or click on songs in the table to select them and view the metrics for them in particular. Click again to unselect or reclick the 
         playlist button to completely reset. The current playlist being displayed can be noted by the label under the radar chart.
       </p>
 
       <p>
         Below the table and radar chart, a collection of donut charts are displayed. These are here to help show the distribution of 
-        moods in each of your playlists. Hover over a partic color to see the number of songs you have for a specific mood, or view the 
+        moods in each of your playlists. Hover over a particular color to see the number of songs you have for that specific mood, or view the 
         default that shows the total number of songs present in each playlist.
       </p>
 
