--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
 
   <div class='playlist-buttons-holder'>
 
-    <button id='liked-button' onclick="update('data/john_liked_songs.csv','all'); document.getElementById('current-playlist').innerHTML = 'Liked Songs'">Liked Songs</button>
-    <button id='hosting-button' onclick="update('data/john_hosting_2020.csv','all'); document.getElementById('current-playlist').innerHTML = 'Hosting 2020'">Hosting 2020</button>
-    <button id='alt-button' onclick="update('data/john_alt_2020.csv','all'); document.getElementById('current-playlist').innerHTML = 'No Other Alternatives'">No Other Alternatives</button>
-    <button id='acoustic-button' onclick="update('data/john_accoustics_2020.csv','all'); document.getElementById('current-playlist').innerHTML = 'Midnight Acoustics'">Midnight Acoustics</button>
+    <button id='liked-button' onclick="update('data/john_liked_songs.csv','all'); document.getElementById('current-playlist').innerHTML = 'Liked Songs'; buttonSelection('Liked Songs', 'none')">Liked Songs</button>
+    <button id='hosting-button' onclick="update('data/john_hosting_2020.csv','all'); document.getElementById('current-playlist').innerHTML = 'Hosting 2020'; buttonSelection('Hosting 2020', 'none')">Hosting 2020</button>
+    <button id='alt-button' onclick="update('data/john_alt_2020.csv','all'); document.getElementById('current-playlist').innerHTML = 'No Other Alternatives'; buttonSelection('No Other Alternatives', 'none')">No Other Alternatives</button>
+    <button id='acoustic-button' onclick="update('data/john_accoustics_2020.csv','all'); document.getElementById('current-playlist').innerHTML = 'Midnight Acoustics'; buttonSelection('Midnight Acoustics', 'none')">Midnight Acoustics</button>
 
     
 
@@ -100,11 +100,11 @@
 
   <div class='mood-buttons-holder'>
 
-    <button id='happy-button' onclick="update(document.getElementById('current-playlist').textContent,'happy')">Happy</button>
-    <button id='gloomy-button' onclick="update(document.getElementById('current-playlist').textContent, 'gloomy')">Gloomy</button>
-    <button id='bops-button' onclick="update(document.getElementById('current-playlist').textContent,'bops')">Bops</button>
-    <button id='dance-button' onclick="update(document.getElementById('current-playlist').textContent,'dance')">Dance</button>
-    <button id='study-button' onclick="update(document.getElementById('current-playlist').textContent,'study')">Study</button>
+    <button id='happy-button' onclick="update(document.getElementById('current-playlist').textContent,'happy'); buttonSelection(document.getElementById('current-playlist').textContent, 'Happy')">Happy</button>
+    <button id='gloomy-button' onclick="update(document.getElementById('current-playlist').textContent, 'gloomy'); buttonSelection(document.getElementById('current-playlist').textContent, 'Gloomy')">Gloomy</button>
+    <button id='bops-button' onclick="update(document.getElementById('current-playlist').textContent,'bops'); buttonSelection(document.getElementById('current-playlist').textContent, 'Bops')">Bops</button>
+    <button id='dance-button' onclick="update(document.getElementById('current-playlist').textContent,'dance'); buttonSelection(document.getElementById('current-playlist').textContent, 'Dance')">Dance</button>
+    <button id='study-button' onclick="update(document.getElementById('current-playlist').textContent,'study'); buttonSelection(document.getElementById('current-playlist').textContent, 'Study')">Study</button>
 
 
   </div>
