--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
         
         <p>
         Use the playlist bar and mood bar to select which set of songs you wish to see– the default is "Liked Songs". Once you hit a button, the 
-        table will display those set of songs and the radar chart will display the averaged metrics of all the songs in that playlist.
+        table will display those set of songs and the radar chart will display the averaged metrics of all the songs in that playlist. Hover over
+        a particular point in the radar map to see the exact metric value.
       </p>
 
       <p>
